tests/snapshots/forge_snapshots__forge_multiple_pull_requests_json.snap
---
source: tests/forge_snapshots.rs
expression: rendered
---
{
  "nodes": [
    {
      "type": "repo",
      "id": {
        "common_dir": "/fixture/repo/.git"
      },
      "common_dir": "/fixture/repo/.git",
      "source_paths": [
        "/fixture/repo"
      ],
      "remotes": [
        "origin=git@github.com:octo/repo.git"
      ]
    },
    {
      "type": "checkout",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo"
      },
      "root": "/fixture/repo",
      "git_dir": "/fixture/repo/.git",
      "current_branch": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "worktree": {
        "kind": "primary"
      }
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "refname": "refs/heads/main"
    },
    {
      "type": "forge_pr",
      "id": {
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 1
      },
      "provider": "github",
      "host": "github.com",
      "owner": "octo",
      "repo": "repo",
      "number": 1,
      "state": "open",
      "updated_epoch": 1772712000
    },
    {
      "type": "forge_pr",
      "id": {
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 2
      },
      "provider": "github",
      "host": "github.com",
      "owner": "octo",
      "repo": "repo",
      "number": 2,
      "state": "merged",
      "updated_epoch": 1772625600
    },
    {
      "type": "forge_pr",
      "id": {
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 3
      },
      "provider": "github",
      "host": "github.com",
      "owner": "octo",
      "repo": "repo",
      "number": 3,
      "state": "closed",
      "updated_epoch": 1772539200
    }
  ],
  "candidate_links": [
    {
      "id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo:belongs_to_repo:repo:/fixture/repo/.git",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo/.git"
        }
      },
      "relation": "belongs_to_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "git common dir",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo:checked_out_branch:branch:repo:/fixture/repo/.git@refs/heads/main",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/fixture/repo/.git"
          },
          "refname": "refs/heads/main"
        }
      },
      "relation": "checked_out_branch",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "symbolic HEAD",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "github:repo:/fixture/repo/.git:branch_has_forge_pr:repo#1",
      "source": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 1
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/fixture/repo/.git"
          },
          "refname": "refs/heads/main"
        }
      },
      "relation": "branch_has_forge_pr",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "github",
        "evidence": "gh pr list head ref",
        "fields": {
          "head_ref": "main",
          "is_draft": false,
          "state": "open",
          "updated_epoch": 1772712000
        },
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "github:repo:/fixture/repo/.git:branch_has_forge_pr:repo#2",
      "source": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 2
      },
      "target": {
        "kind": "unresolved",
        "evidence": {
          "node_type": "branch",
          "native_id": "feature",
          "metadata": {
            "host": "github.com",
            "owner": "octo",
            "repo": "repo"
          }
        }
      },
      "relation": "branch_has_forge_pr",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "github",
        "evidence": "gh pr list head ref",
        "fields": {
          "head_ref": "feature",
          "is_draft": false,
          "state": "merged",
          "updated_epoch": 1772625600
        },
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "github:repo:/fixture/repo/.git:branch_has_forge_pr:repo#3",
      "source": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 3
      },
      "target": {
        "kind": "unresolved",
        "evidence": {
          "node_type": "branch",
          "native_id": "stale",
          "metadata": {
            "host": "github.com",
            "owner": "octo",
            "repo": "repo"
          }
        }
      },
      "relation": "branch_has_forge_pr",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "github",
        "evidence": "gh pr list head ref",
        "fields": {
          "head_ref": "stale",
          "is_draft": false,
          "state": "closed",
          "updated_epoch": 1772539200
        },
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    }
  ],
  "resolved_relationships": [
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo/.git"
      },
      "relation": "belongs_to_repo",
      "selected_link_id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo:belongs_to_repo:repo:/fixture/repo/.git"
    },
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo"
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "relation": "checked_out_branch",
      "selected_link_id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo:checked_out_branch:branch:repo:/fixture/repo/.git@refs/heads/main"
    },
    {
      "source": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 1
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "relation": "branch_has_forge_pr",
      "selected_link_id": "github:repo:/fixture/repo/.git:branch_has_forge_pr:repo#1"
    }
  ],
  "diagnostics": [
    {
      "kind": "unresolved_endpoint",
      "link_id": "github:repo:/fixture/repo/.git:branch_has_forge_pr:repo#2",
      "relation": "branch_has_forge_pr"
    },
    {
      "kind": "unresolved_endpoint",
      "link_id": "github:repo:/fixture/repo/.git:branch_has_forge_pr:repo#3",
      "relation": "branch_has_forge_pr"
    }
  ],
  "node_provenance": [
    {
      "node_id": {
        "type": "repo",
        "common_dir": "/fixture/repo/.git"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 1
      },
      "provider": "github",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 2
      },
      "provider": "github",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "forge_pr",
        "provider": "github",
        "host": "github.com",
        "owner": "octo",
        "repo": "repo",
        "number": 3
      },
      "provider": "github",
      "freshness_epoch": "<redacted>"
    }
  ]
}
