tests/snapshots/forge_snapshots__session_table_agent_projection_with_pr.snap
---
source: tests/forge_snapshots.rs
expression: rendered
---
ID  AGENT  CWD  MUX  MUX/CONF  PR  PR/CONF  LINEAGE
--  -----  ---  ---  --------  --  -------  -------
