tests/snapshots/forge_snapshots__session_table_mux_projection_empty.snap
---
source: tests/forge_snapshots.rs
expression: rendered
---
ID  MUX  CWD  AGENTS
--  ---  ---  ------
