tests/snapshots/forge_snapshots__session_table_union_projection_with_pr.snap
---
source: tests/forge_snapshots.rs
expression: rendered
---
ID  KIND  LABEL  CWD  RELATIONSHIP
--  ----  -----  ---  ------------
